[package]
name = "sshfs"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.92"
async-trait = "0.1.83"
clap = { version = "4.5.20", features = ["derive", "env"] }
crossterm = "0.28.1"
ctrlc = "3.4.5"
futures = "0.3.31"
ratatui = { version = "0.29.0", features = ["all-widgets"] }
russh = "0.45.0"
russh-sftp = "2.0.5"
tokio = { version = "1.41.0", features = ["full"] }
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
